<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="12dp"
       android:orientation="vertical"
       >
   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="12dp"
       >

      <ImageView
         android:id="@+id/ivhacker"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:src="@drawable/hacker"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:text="Featured"
          android:layout_marginBottom="20dp"
          android:layout_gravity="center_horizontal"
         android:textColor="@color/black"
         />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/news_title_1"
          android:textColor="@color/black"
          android:textStyle="bold"
          android:layout_gravity="center_horizontal"
          android:textSize="22sp"
         />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:text="@string/news_2_detail"
          android:textColor="@color/black"
          android:textSize="18sp"
          />

   </LinearLayout>

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="12dp"
       >

      <ImageView

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:src="@drawable/infosys"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:text="Featured"
          android:layout_marginBottom="20dp"
          android:layout_gravity="center_horizontal"
         android:textColor="@color/black"
         />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/news_title_2"
          android:textColor="@color/black"
          android:textStyle="bold"
          android:layout_gravity="center_horizontal"
          android:textSize="22sp"
         />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:text="@string/news_1_detail"
          android:textColor="@color/black"
          android:textSize="18sp"
          />
   </LinearLayout>

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="12dp"
          >

         <ImageView

             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/justdial"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Featured"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/black"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/newstitle3"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal"
             android:textSize="22sp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/news_3_detail"
             android:textColor="@color/black"
             android:textSize="18sp"
             />
      </LinearLayout>

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="12dp"
          >

         <ImageView

             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/plane"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Featured"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/black"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/news4title"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal"
             android:textSize="22sp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/news_4_detail"
             android:textColor="@color/black"
             android:textSize="18sp"
             />
      </LinearLayout>

   </LinearLayout>


</ScrollView>